run observer effect bench and save results directly